<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/blind_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="grupo4.smarthome.LampActivity"
    android:background="#FFFFFF">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/alarm_image"
                android:src="@drawable/alarm"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:contentDescription="@string/devices"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/alarm_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dispositivo"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_alignTop="@id/alarm_image"
                android:layout_toEndOf="@id/alarm_image" />

            <TextView
                android:id="@+id/alarm_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="Estado"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/alarm_name"
                android:layout_toEndOf="@id/alarm_image" />

            <LinearLayout
                android:id="@+id/armAwayGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/alarm_image"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:weightSum="1">
                <TextView
                    android:id="@+id/armAway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/armAway"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <Switch
                    android:id="@+id/armSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp" />
            </LinearLayout>

            <Button
                android:id="@+id/changeCodeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changeSecurityCode"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_below="@id/armAwayGroup"/>

        </RelativeLayout>
    </FrameLayout>




    <android.support.design.widget.BottomNavigationView
        android:id="@+id/alarm_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />
</LinearLayout>