<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/blind_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="grupo4.smarthome.LampActivity"
    android:background="#FFFFFF">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/door_image"
                android:src="@drawable/door"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:padding="16dp"
                android:layout_marginTop="17dp"
                android:contentDescription="@string/devices"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/door_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dispositivo"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:layout_alignTop="@id/door_image"
                android:layout_toEndOf="@id/door_image" />


            <TextView
                android:id="@+id/door_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="Estado"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/door_name"
                android:layout_toEndOf="@id/door_image" />

            <LinearLayout
                android:id="@+id/openGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/door_image"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:weightSum="1">
                <TextView
                    android:id="@+id/openSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <Switch
                    android:id="@+id/open"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/openGroup"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:weightSum="1">
                <TextView
                    android:id="@+id/lockSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lock"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <Switch
                    android:id="@+id/lock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp" />
            </LinearLayout>

        </RelativeLayout>
    </FrameLayout>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/door_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>