<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lamp_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="grupo4.smarthome.LampActivity"
    android:background="#FFFFFF">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/lamp_image"
                android:src="@drawable/lamp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/devices"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/brightnessGroup" />

            <TextView
                android:id="@+id/lamp_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lampara"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:layout_alignTop="@+id/lamp_image"
                android:layout_toEndOf="@+id/lamp_image" />

            <Switch
                android:id="@+id/lamp_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/lamp_image"
                android:layout_below="@id/lamp_name"
                android:layout_margin="8dp"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:id="@+id/brightnessGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lamp_image"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/brightness_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/brigthness_seekBar"
                    android:layout_alignStart="@+id/brightnessGroup"
                    android:text="@string/changeBrightness"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:id="@+id/brightnessLevel_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/brigthness_seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/brightnessGroup" />

            <LinearLayout
                android:id="@+id/colorGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/brigthness_seekBar"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/color_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/changeColor"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:id="@+id/colorPicked_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium" />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/colorButtonGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_below="@id/colorGroup"
                android:layout_centerHorizontal="true">

                <Button
                    android:id="@+id/redButton"
                    android:layout_width="48sp"
                    android:layout_height="48sp"
                    android:background="@drawable/red_shape"
                    android:elevation="0dp"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:layout_marginRight="32dp"/>

                <Button
                    android:id="@+id/blueButton"
                    android:layout_width="48sp"
                    android:layout_height="48sp"
                    android:background="@drawable/blue_shape"
                    android:elevation="0dp"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:layout_marginRight="32dp"/>

                <Button
                    android:id="@+id/greenButton"
                    android:layout_width="48sp"
                    android:layout_height="48sp"
                    android:background="@drawable/green_shape"
                    android:elevation="0dp"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:layout_marginRight="32dp"/>

                <Button
                    android:id="@+id/yellowButton"
                    android:layout_width="48sp"
                    android:layout_height="48sp"
                    android:background="@drawable/yellow_shape"
                    android:elevation="0dp"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:layout_marginRight="5sp"/>
            </LinearLayout>

        </RelativeLayout>
    </FrameLayout>




    <android.support.design.widget.BottomNavigationView
        android:id="@+id/lamp_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>